# brbug

./: .gitignore  README.md  pyproject.toml
brbug/: __init__.py  __main__.py  brbug.py
tests/: README.md  test_cli.py  test_lib.py
